Definitive 100% French-free localization for all 17 locales and backend translation fixes

--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -279,6 +279,10 @@
     "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
   },
   "alerts": {
+    "ai_anomaly_detection": "AI Anomaly Detection",
+    "all_good": "Everything is in order",
+    "all_stocks_normal": "All your stocks are normal",
+    "analysis_error": "Could not analyze anomalies",
     "analyze_desc": "Analyser ventes, stocks et marges",
     "analyzing": "Analyse en cours...",
     "anomaly_analysis_summary": "Analyse IA — {{count}} anomalie détectée",
@@ -308,8 +312,14 @@
     "error_rule_update": "Impossible de modifier la règle",
     "error_threshold_update": "Impossible de modifier le seuil",
     "mark_read": "Marquer lue",
+    "no_alerts": "No alerts",
     "no_anomalies": "Aucune anomalie détectée",
     "no_rules": "Aucune règle configurée",
+    "rule_dormant": "Dormant product",
+    "rule_low_stock": "Low stock",
+    "rule_out_of_stock": "Out of stock",
+    "rule_overstock": "Overstock",
+    "rule_update_error": "Could not modify rule",
     "rules_title": "Règles d'alertes",
     "see_less": "Voir moins",
     "see_more_all_count": "Voir les {{count}} autres alertes",
@@ -320,7 +330,9 @@
     "subtitle_empty": "Tout est en ordre",
     "subtitle_unread": "{{count}} non lue(s)",
     "threshold": "Seuil :",
-    "title": "Alertes"
+    "threshold_update_error": "Could not modify threshold",
+    "title": "Alertes",
+    "unread": "unread"
   },
   "auth": {
     "login": {
@@ -484,6 +496,7 @@
     "description": "Description",
     "edit": "Modifier",
     "error": "Erreur",
+    "export": "Exporter",
     "filter": "Filtrer",
     "generate": "Générer",
     "generic_error": "Une erreur est survenue.",
@@ -499,6 +512,7 @@
     "none": "Aucun",
     "offline": "Hors ligne",
     "or": "ou",
+    "orders": "Commandes",
     "periods": {
       "7d": "7j",
       "30d": "30j",
@@ -510,6 +524,7 @@
       "apply": "Appliquer",
       "last_days": "Derniers {{count}} jours"
     },
+    "preferences_error": "Could not update your preferences.",
     "price": "Prix",
     "save": "Enregistrer",
     "search": "Rechercher",
@@ -574,8 +589,13 @@
     "debt_in_progress": "Dette en cours",
     "debt_ref_placeholder": "Motif de la dette...",
     "debts": "Dettes",
+    "default_store": "My Shop",
+    "delete_client": "Delete customer",
+    "delete_confirm": "Are you sure you want to delete this customer?",
     "delete_customer": "Supprimer le client",
     "delete_promo": "Supprimer la promotion",
+    "delete_promotion": "Delete promotion",
+    "delete_promotion_confirm": "Are you sure you want to delete this promotion?",
     "discount_percent": "Remise (%)",
     "edit_customer": "Modifier le client",
     "edit_promotion": "Modifier la promotion",
@@ -596,6 +616,7 @@
     "error_sms_open": "Impossible d'envoyer le SMS",
     "error_whatsapp_open": "Impossible d'ouvrir WhatsApp",
     "estimated_new_balance": "Nouveau solde estimé",
+    "export_error": "Could not export customers",
     "last_purchase": "Dernier achat",
     "last_purchase_short": "Dernier achat",
     "loyalty_points": "Cumul de points",
@@ -610,6 +631,7 @@
     "no_customer_found": "Aucun client trouvé",
     "no_debt": "Aucune dette en cours",
     "no_history": "Aucun historique d'opérations",
+    "no_phone_in_tier": "No customers with phone in this category",
     "no_purchase_recorded": "Aucun achat enregistré",
     "notes_optional": "Notes (optionnel)",
     "notes_placeholder": "Remarques sur le client...",
@@ -618,6 +640,7 @@
     "payment_ref_placeholder": "Réf. paiement...",
     "phone_placeholder": "+225 XX XX XX XX",
     "points": "Points",
+    "points_desc": "Enable point accumulation during sales",
     "points_ratio_label": "Ratio (1 pt pour X {{currency}})",
     "points_required": "Points requis",
     "points_short": "pts",
@@ -631,6 +654,7 @@
     "report_debts": "Dettes",
     "report_title": "RAPPORT CLIENTS & CRM",
     "report_total_revenue": "CA total",
+    "reward_threshold": "Reward Threshold",
     "reward_threshold_label": "Seuil de récompense (pts)",
     "search_customers_placeholder": "Rechercher un client...",
     "search_placeholder": "Rechercher un client...",
@@ -645,6 +669,7 @@
     "success_operation_recorded": "Opération enregistrée avec succès",
     "tab_account": "Compte",
     "tab_contact": "Contact",
+    "tab_info": "Info",
     "tab_infos": "Infos",
     "tab_purchases": "Achats",
     "target_audience": "Audience cible",
@@ -692,6 +717,7 @@
     "expiry_alerts": "Alertes Péremption (30j)",
     "generate_tasks": "Générer de nouvelles tâches",
     "greeting": "Bonjour, {{name}}",
+    "history": "Historique",
     "history_btn": "Historique",
     "low_stock": "Stock bas",
     "month_revenue": "Ventes mois",
@@ -705,15 +731,17 @@
     "out_of_stock": "Rupture",
     "overstock": "Surstock",
     "pending_orders": "En attente",
+    "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} produit",
     "products_count_other": "{{count}} produits",
     "profitability_analysis": "Analyse de Rentabilité",
-    "recent_alerts": "Alertes récentes",
+    "recent_alerts": "Alertes Récentes",
     "recent_sales": "Ventes Récentes",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventaire Tournant",
     "see_detail_product": "Voir le détail par produit",
+    "see_feature": "See this feature",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres produits critiques",
@@ -729,7 +757,7 @@
     "stock_by_category": "Stock par catégorie",
     "stock_evolution": "Evolution Valeur Stock (7j)",
     "stock_label": "Stock",
-    "stock_status": "Statut des stocks",
+    "stock_status": "Statut des Stocks",
     "stock_value": "Valeur stock",
     "sub_greeting": "Voici l'état de vos stocks",
     "suggestions_reorder": "Suggestions réappro",
@@ -1184,8 +1212,31 @@
     "terms_title": "Conditions Générales"
   },
   "marketplace": {
+    "all": "All",
+    "apply": "Apply",
+    "category": "Category",
+    "city": "City",
+    "city_filter": "Filter by city...",
+    "contact": "Contact",
+    "empty_products": "No products found",
+    "empty_suppliers": "No suppliers found",
+    "filters": "Filters",
+    "max_price": "Max",
+    "min_price": "Min",
+    "min_rating": "Min rating",
+    "modify_criteria": "Modify your search criteria",
     "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
-    "order_sent_message": "Commande envoyée au fournisseur"
+    "order_sent_message": "Commande envoyée au fournisseur",
+    "price_range": "Price range",
+    "products": "Products",
+    "reset": "Reset",
+    "search_product": "Search product...",
+    "search_supplier": "Search supplier...",
+    "send_invitation": "Send invitation",
+    "star": "⭐",
+    "suppliers": "Marketplace Suppliers",
+    "title": "Marketplace",
+    "verified_only": "Verified only"
   },
   "modals": {
     "cancel": "Annuler",
@@ -1244,14 +1295,19 @@
     "advance_status": "Confirmer l'avancement",
     "ai_extraction": "Extraction IA",
     "all": "Tout",
+    "all_suppliers": "All suppliers",
     "already_received": "Déjà reçu",
+    "approved": "Approved",
     "available": "Disponible",
+    "bulk": "Bulk Orders",
     "cancel_error": "Erreur lors de l'annulation",
     "cancel_order": "Annuler la commande",
+    "cancelled": "Cancelled",
     "change_status_to": "Changer le statut en",
     "client": "Client",
     "complete_return_error": "Impossible de compléter le retour",
     "complete_return_generate_credit_note": "Compléter le retour & générer l'avoir",
+    "completed": "Completed",
     "confirm_advance_status": "Voulez-vous passer au statut {{nextStatus}} ?",
     "confirm_cancel": "Voulez-vous vraiment annuler ?",
     "confirm_complete_return": "Confirmer la complétion du retour ?",
@@ -1260,16 +1316,22 @@
     "confirm_receipt": "Confirmer la réception",
     "confirmation": "Confirmation",
     "confirmation_title": "Confirmation de commande",
+    "confirmed": "Confirmed",
     "create_error": "Impossible de créer la commande",
     "create_order": "Créer une commande",
     "create_return": "Créer le retour",
     "create_return_error": "Impossible de créer le retour",
     "created_at": "Créée le",
     "credit_note_generated": "Avoir généré",
+    "credit_notes_count": "{{count}} credit note(s)",
     "credit_notes_count_one": "{{count}} avoir disponible",
     "credit_notes_count_other": "{{count}} avoirs disponibles",
+    "customer": "Customer",
     "customer_return": "Retour client",
     "dates": "Dates",
+    "delivered": "Delivered",
+    "details": "Order Details",
+    "empty": "No orders found",
     "enter_received_quantities": "Saisissez les quantités reçues",
     "exceeds_ordered_qty": "Dépasse la quantité commandée ({{count}})",
     "expected_delivery": "Livraison prévue",
@@ -1281,6 +1343,7 @@
     "invoice_number_label": "N° facture :",
     "invoice_scanned": "Facture scannée",
     "items": "Articles",
+    "items_count": "{{count}} item(s)",
     "items_detected_one": "{{count}} article détecté",
     "items_detected_other": "{{count}} articles détectés",
     "items_to_return": "Articles à retourner",
@@ -1299,18 +1362,24 @@
     "no_orders_bulk_desc": "Aucune commande groupée en cours",
     "no_orders_desc": "Créez votre première commande fournisseur",
     "no_product_available": "Aucun produit disponible",
+    "no_returns": "No returns",
+    "no_returns_desc": "Returns will appear here",
+    "no_returns_history": "No return history",
     "no_supplier_found": "Aucun fournisseur trouvé",
     "notes_optional": "Notes (optionnel)",
     "notes_placeholder": "Instructions spéciales...",
     "order_associated_stock": "Associé au stock local",
     "order_detail": "Détail de la commande",
     "ordered": "Commandé",
+    "orders_count": "{{count}} order(s)",
     "orders_count_one": "{{count}} commande",
     "orders_count_other": "{{count}} commandes",
     "partial_delivery": "Réception partielle",
     "partial_notes_placeholder": "Ex: Colis endommagé...",
     "partial_receipt": "Réception partielle",
+    "partially_delivered": "Partially Delivered",
     "pdf_error": "Erreur lors de la génération du PDF",
+    "pending": "Pending",
     "product": "Produit",
     "rate_supplier": "Noter le fournisseur",
     "rating_error": "Impossible de soumettre l'avis",
@@ -1320,6 +1389,7 @@
     "received": "Reçue",
     "received_orders": "Commandes reçues",
     "received_qty": "Reçu : {{received}} / {{total}}",
+    "rejected": "Rejected",
     "related_order": "Commande liée",
     "return_completed_credit_note_generated": "Retour complété et avoir généré",
     "return_created_success": "Retour créé avec succès",
@@ -1327,8 +1397,11 @@
     "return_notes_placeholder": "Raison du retour...",
     "return_type": "Type de retour",
     "returned_items": "Articles retournés",
+    "returns": "Returns & Credit",
+    "returns_count": "{{count}} return(s)",
     "returns_count_one": "{{count}} retour",
     "returns_count_other": "{{count}} retours",
+    "returns_credit_notes": "Returns & Credit Notes",
     "scan_error": "Impossible d'analyser la facture",
     "scan_invoice_desc": "Prenez en photo une facture fournisseur. L'IA extraira automatiquement les articles.",
     "scan_invoice_title": "Scanner une facture",
@@ -1339,6 +1412,7 @@
     "see_summary": "Voir le récapitulatif",
     "sent_success": "Commande envoyée avec succès !",
     "share_purchase_order_pdf": "Partager le Bon de Commande (PDF)",
+    "shipped": "Shipped",
     "shipping": "En cours",
     "status": "Statut",
     "store_config_missing": "Configuration boutique manquante",
@@ -1350,6 +1424,7 @@
     "summary_volume": "Volume total",
     "supplier": "Fournisseur",
     "supplier_return": "Retour fournisseur",
+    "suppliers": "Suppliers",
     "thanks": "Merci",
     "title": "Commandes",
     "total": "Total",
@@ -1359,6 +1434,7 @@
     "update_error": "Erreur lors de la mise à jour",
     "updated_at": "Mise à jour",
     "validate_receipt": "Valider la réception",
+    "validate_reception": "Validate Reception",
     "view_detailed_history": "Voir l'historique détaillé"
   },
   "pin": {
@@ -1373,12 +1449,20 @@
   },
   "pos": {
     "anonymous_customer": "Passant",
+    "cart": "Cart",
     "cart_title": "Panier",
+    "cash": "Cash",
     "checkout": "Paiement",
+    "clear": "Clear",
     "clear_cart": "Vider",
+    "client_create_error": "Could not create customer",
+    "client_created": "Customer created and selected",
     "confirm_credit_sale": "Confirmer la vente à crédit ?",
     "create_customer_btn": "Créer le client",
+    "credit": "Credit Sale",
+    "credit_confirmation": "Credit Confirmation",
     "credit_confirmation_title": "Confirmation Crédit",
+    "credit_select_client": "Please select a customer for a credit sale.",
     "credit_success": "Vente à crédit enregistrée avec succès.",
     "customer_create_error": "Impossible de créer le client",
     "customer_created": "Client créé et sélectionné",
@@ -1390,6 +1474,8 @@
     "empty_cart": "Le panier est vide",
     "error_save_sale": "Impossible d'enregistrer la vente",
     "insufficient_stock": "Stock insuffisant",
+    "mobile_money": "Mobile Money",
+    "name_required": "Name is required",
     "new_amount": "Nouveau montant",
     "new_customer_title": "Nouveau Client",
     "new_debt": "Nouvelle dette",
@@ -1401,12 +1487,17 @@
     "payment_credit": "À crédit",
     "payment_mobile": "Mobile",
     "product_not_found": "Produit non trouvé",
+    "sale_error": "Could not record sale",
     "sale_success": "Vente enregistrée !",
     "search_placeholder": "Rechercher un produit...",
     "select_customer_credit": "Veuillez sélectionner un client pour une vente à crédit.",
+    "sku_not_found": "No product found with SKU:",
+    "stock_depleted": "Stock depleted",
+    "success": "Sale recorded",
     "suggestions_title": "Souvent achetés ensemble",
     "title": "Caisse (POS)",
     "total": "Total",
+    "unknown": "Unknown",
     "unknown_product_msg": "Aucun produit trouvé avec le SKU: {{sku}}",
     "unknown_product_title": "Produit inconnu"
   },
@@ -1572,6 +1663,7 @@
     "rfid_info_msg": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "rfid_info_title": "RFID",
     "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
+    "search": "Search for a product...",
     "search_placeholder": "Rechercher un produit...",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
@@ -1609,22 +1701,26 @@
     "birthdays_label": "Anniversaires",
     "client_reactivation_desc": "Alerte si un client VIP n’est pas revenu",
     "client_reactivation_label": "Réactivation client",
+    "debt_recovery": "Debt Recovery",
     "debt_recovery_desc": "Rappel si la dette d’un client dépasse un montant",
     "debt_recovery_label": "Recouvrement de dettes",
     "dormant_products_desc": "Alerte si un produit n’a pas été vendu depuis longtemps",
-    "dormant_products_label": "Produits dormants",
+    "dormant_products_label": "Produit Dormant",
     "expense_spike_desc": "Alerte si les charges augmentent anormalement",
     "expense_spike_label": "Pic de dépenses",
     "inventory_check_desc": "Rappel pour vérifier le stock physique d’un produit",
     "inventory_check_label": "Inventaire tournant",
     "late_deliveries_desc": "Alerte si une livraison fournisseur dépasse le délai",
-    "late_deliveries_label": "Retards de livraison",
+    "late_deliveries_label": "Livraison en Retard",
+    "low_stock_label": "Stock Faible",
     "monthly_report_desc": "Disponibilité du résumé comptable mensuel",
     "monthly_report_label": "Rapport mensuel",
     "pending_invitations_desc": "Rappel pour les invitations d’équipe non acceptées",
     "pending_invitations_label": "Invitations en attente",
     "replenishment_desc": "Suggestions d’achat basées sur les ruptures",
-    "replenishment_label": "Réapprovisionnement",
+    "replenishment_label": "Réapprovisionnement Suggéré",
+    "stock_alerts": "Critical alerts for low stock or expired products.",
+    "title": "Reminder Rules",
     "unit_days": "jours"
   },
   "settings": {
@@ -1651,6 +1747,7 @@
     "dispute_payment": "Paiement",
     "dispute_product": "Produit",
     "dispute_service": "Service",
+    "dispute_type": "Dispute Type",
     "export_data": "Exporter mes données",
     "export_data_desc": "Télécharger une copie complète de vos données (JSON)",
     "export_error": "Echec de l'export des données.",
@@ -1707,8 +1804,29 @@
     "users_permissions_desc": "Gérez les accès de vos employés",
     "version": "Version"
   },
+  "stock": {
+    "reasons": {
+      "pos_sale": "Vente POS",
+      "inventory_adjustment": "Ajustement d'inventaire",
+      "supplier_reception": "Réception fournisseur",
+      "loss_damage": "Perte ou casse"
+    }
+  },
   "store_selector": {
-    "default_name": "Mon Magasin"
+    "category_placeholder": "Filter by category...",
+    "create": "Create",
+    "create_error": "Could not create store",
+    "default_name": "Mon Magasin",
+    "edit_error": "Unable to update product",
+    "edit_success": "Product updated successfully",
+    "edit_title": "Edit product",
+    "load_error": "Could not load stores",
+    "my_stores": "My Stores",
+    "new_store": "New store",
+    "no_price_history": "No price history",
+    "price_update": "Price update",
+    "store_name_placeholder": "Store name",
+    "switch_error": "Could not switch store"
   },
   "subscription": {
     "activated_success": "Votre abonnement a été activé avec succès !",
@@ -2003,6 +2121,28 @@
     "subscription": "Abonnement",
     "suppliers": "Fourn.",
     "users": "Utilisateurs"
+  },
+  "tips": {
+    "accounting_03_desc": "Export your data in CSV format for your accountant or external accounting software.",
+    "accounting_03_title": "CSV Export",
+    "alerts_03_desc": "Detect products without any sales for 30 days to optimize your inventory.",
+    "alerts_03_title": "Dormant Products",
+    "dashboard_01_desc": "Utilisez le sélecteur en haut à droite pour passer rapidement d'une boutique à l'autre.",
+    "dashboard_01_title": "Changer de Boutique",
+    "dashboard_02_desc": "La classe A représente 80% de votre CA. Concentrez vos efforts sur ces produits prioritaires.",
+    "dashboard_02_title": "Analyse ABC",
+    "dashboard_03_desc": "Le système analyse vos ventes récentes et suggère automatiquement les produits à commander.",
+    "dashboard_03_title": "Réappro Auto",
+    "dashboard_04_desc": "Les lots dont la date de péremption est à moins de 30 jours s'affichent automatiquement.",
+    "dashboard_04_title": "Alertes Péremption",
+    "dashboard_05_desc": "Appuyez sur le bouton Statistiques pour accéder aux graphiques complets.",
+    "dashboard_05_title": "Graphiques Détails",
+    "lots_peremption_desc": "Gérez les lots avec leurs dates de péremption, idéal pour l'alimentaire.",
+    "lots_peremption_title": "Lots & Péremption",
+    "pos_01_desc": "Scan items quickly: the basket fills up automatically as you go.",
+    "pos_01_title": "Quick Scanner",
+    "pos_04_desc": "Send the receipt via WhatsApp directly to the customer after each sale.",
+    "pos_04_title": "WhatsApp Receipt"
   },
   "users": {
     "access_denied": "Accès refusé.",
